# frappe_ai

./: .pre-commit-config.yaml  README.md  opencode.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.opencode/agents/: frappe-ai.md
docs/: nginx_sse.conf
frappe_ai/: hooks.py  install.py  modules.txt  requirements.txt
frappe_ai/api/: chat.py
frappe_ai/frappe_ai/: setup.py
frappe_ai/frappe_ai/ai_engine/: base_provider.py  context_manager.py  rate_limiter.py  router.py  system_prompt.md
frappe_ai/frappe_ai/ai_engine/agents/: agent_runner.py  tool_registry.py
frappe_ai/frappe_ai/ai_engine/providers/: gemini_provider.py  grok_provider.py  groq_provider.py  nvidia_provider.py  opencode_provider.py  test_opencode_provider.py
frappe_ai/frappe_ai/api/: chat.py  conversation.py  settings.py
frappe_ai/frappe_ai/doctype/ai_assistant_settings/: ai_assistant_settings.js  ai_assistant_settings.json  ai_assistant_settings.py  test_ai_assistant_settings.py
frappe_ai/frappe_ai/doctype/ai_conversation/: ai_conversation.json  ai_conversation.py
frappe_ai/frappe_ai/doctype/ai_message/: ai_message.json
frappe_ai/frappe_ai/doctype/ai_rate_limit/: ai_rate_limit.js  ai_rate_limit.json  ai_rate_limit.py  test_ai_rate_limit.py
frappe_ai/frappe_ai/doctype/ai_settings/: ai_settings.js  ai_settings.json  ai_settings.py  test_ai_settings.py
frappe_ai/frappe_ai/doctype/ai_tool_call_log/: ai_tool_call_log.js  (+3 more)
frappe_ai/public/css/: frappe_ai.css
frappe_ai/public/js/: frappe_ai.bundle.js  frappe_ai.js  frappe_ai_chat.js
frappe_ai/tests/: run_tests.py
(+24 files in other folders)
