[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "frappe-ai"
version = "0.1.0"
description = "AI chat assistant for Frappe v16 — powered by OpenCode.ai (OpenRouter fallback)"
authors = [{name = "Michele Milazzo", email = "michelemilazzo@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "frappe>=16.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]
