[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "frappe-ai"
version = "0.1.0"
description = "AI chat assistant for Frappe — powered by OpenCode.ai (OpenRouter fallback)"
authors = [{name = "Michele Milazzo", email = "mic.milazzo@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "frappe>=15.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]
