[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "frappe_ai"
version = "0.2.0"
description = "AI chat assistant for Frappe — Claude, OpenRouter, OpenCode.ai, OpenAI"
authors = [{name = "Michele Milazzo", email = "mic.milazzo@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
